// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create route 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <div
      class="Header"
    >
      <a
        class="created-by"
        href="https://portfolio.jpmunz.com"
      >
        Created By Jonathan Munz
      </a>
      <a
        href="/"
      >
        <img
          alt=""
          class="logo"
          src="logo.svg"
        />
      </a>
    </div>
    <div>
      Mocked Create
    </div>
  </div>
</DocumentFragment>
`;

exports[`Default route 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <div
      class="Header"
    >
      <a
        class="created-by"
        href="https://portfolio.jpmunz.com"
      >
        Created By Jonathan Munz
      </a>
      <a
        href="/"
      >
        <img
          alt=""
          class="logo"
          src="logo.svg"
        />
      </a>
    </div>
    <div>
      Mocked Home
    </div>
  </div>
</DocumentFragment>
`;

exports[`Edit route 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <div
      class="Header"
    >
      <a
        class="created-by"
        href="https://portfolio.jpmunz.com"
      >
        Created By Jonathan Munz
      </a>
      <a
        href="/"
      >
        <img
          alt=""
          class="logo"
          src="logo.svg"
        />
      </a>
    </div>
    <div>
      Mocked Edit
    </div>
  </div>
</DocumentFragment>
`;
